--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -7,11 +7,8 @@ services:
     environment:
       - POSTGRES_DB=postgres
       - POSTGRES_USER=postgres
-      - POSTGRES_PASSWORD=postgres_analyze_training
+      - POSTGRES_PASSWORD=postgres
     ports:
       - "54320:5432"
-    healthcheck:
-      test: [ 'CMD-SHELL', "pg_isready -U postgres" ]
-      interval: 1s
-      timeout: 5s
-      retries: 20
+    volumes:
+      - ../:/training
